--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,28 @@
 Package: cloneman
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Parse and manage CNV and clonal information from various methods
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Konstantinos Mavrommatis [aut, cre]
+Maintainer: Konstantinos Mavrommatis <mavrommatis.konstantinos@gmail.com>
 Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+    cloneman implements functions to parse and handle CNV segments and clonal information from various
+    common packages
+    At this point for CNV (and clonal information if available) we can use
+    ASCAT, CloneCNA, ControlFreec, FACETS, SuperFreq.
+    For clonal information (which includes both CNV and SNV events) we can use
+    SuperFreq, PhyloWGS
+    For clonal information based only on SNV events we can use
+    PyClone-VI, Sciclone, FastClone.
+    The structure of the object contains
+    * dataframe with clone information, i.e. name, CCF, number of SNV events and number of CNV segments
+    * GRangesList with CNV segments, each member of the list containst the segments assigned to a clone
+      if the events of multiple clones are overlapping, e.g. if a maternal clone is present with all the events
+      and a daughter clone is also having some of the maternal events
+      the GRangesList elements must be preprocessed 
+    * GRanges list with SNV events.
+    The parse* functions return typically GRanges objects with segments and/or SNVs
+    the load* functions create cloneobj with more rich information
+    For more information check the help of the cloneman package.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
@@ -14,5 +31,7 @@ Imports:
     rtracklayer,
     GenomeInfoDb,
     magrittr,
-    dplyr
+    utils,
+    dplyr,
+    mclust
 RoxygenNote: 7.1.2
